# mailtracebox

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: default.yml
src/mailtracebox/: __init__.py  __main__.py
src/mailtracebox/cli/: __init__.py  app.py
src/mailtracebox/config/: __init__.py  default.yml  manager.py  schema.py
src/mailtracebox/core/: __init__.py  context.py  engine.py  plugin_manager.py
src/mailtracebox/log/: __init__.py  setup.py
src/mailtracebox/models/: __init__.py  breach.py  common.py  domain.py  email.py  plugin.py  report.py  social.py
src/mailtracebox/plugins/: __init__.py  account_discovery.py  account_discovery.py.bak  base.py  breach_check.py  crtsh.py  dns_recon.py  email_validator.py  gravatar.py  http_headers.py  ip_info.py  smtp_verify.py  social_check.py  whois_lookup.py
src/mailtracebox/reports/: __init__.py  base.py  csv_report.py  html_report.py  json_report.py  markdown_report.py  rich_report.py
src/mailtracebox/services/: __init__.py  cache.py  dns_resolver.py  http_client.py  rate_limiter.py
src/mailtracebox/utils/: __init__.py  exceptions.py  helpers.py  validators.py
tests/: conftest.py
tests/integration/: test_engine.py
tests/unit/: test_cache.py  test_config.py  test_context.py  test_models.py  test_plugin_manager.py  test_rate_limiter.py  test_validators.py
