[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mailtracebox"
version = "0.1.0"
description = "Production-grade Email Intelligence Framework for authorized OSINT collection"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "msk0x", email = "msk0x@users.noreply.github.com" },
]
keywords = ["email", "intelligence", "osint", "security", "reconnaissance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]
dependencies = [
    "aiohttp>=3.9.0",
    "brotlicffi>=1.1.0",
    "pydantic>=2.5.0",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "pyyaml>=6.0.1",
    "jinja2>=3.1.3",
    "dnspython>=2.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
mailtracebox = "mailtracebox.cli.app:main"

[project.urls]
Homepage = "https://github.com/msk0x/mailtracebox"
Repository = "https://github.com/msk0x/mailtracebox"
Issues = "https://github.com/msk0x/mailtracebox/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mailtracebox"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
markers = [
    "integration: marks tests as integration tests",
    "slow: marks tests as slow",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
